hotfix: reduce size docker image file.